get products paged docs
