# apis/internal/webserver/handlers/product_handlers.go
@@ -137,6 +137,20 @@ func (h *ProductHandler) DeleteProduct(w http.ResponseWriter, r *http.Request) {
 	w.WriteHeader(http.StatusOK)
 }
 
+// GetProducts godoc
+// @Summary             List all products paged
+// @Description         List all products paged
+// @Tags                products
+// @Accept            	json
+// @Produce           	json
+// @Param             	page         query      string    false    "page number"
+// @Param             	limit        query      string    false    "limit"
+// @Param             	sort         query      string    false    "sort (asc, desc)"
+// @Success           	200          {array}    entity.Product
+// @Failure           	400          {object}   dto.ErrorResponse
+// @Failure           	500          {object}   dto.ErrorResponse
+// @Router            	/products    [get]
+// @Security          	ApiKeyAuth
 func (h *ProductHandler) GetProducts(w http.ResponseWriter, r *http.Request) {
 	page := r.URL.Query().Get("page")
 	limit := r.URL.Query().Get("limit")
